--- a/event-template/index.pug
+++ b/event-template/index.pug
@@ -20,6 +20,7 @@ doctype html
     <meta property="og:image"         content="http://devternity.com/images/logo_2017_filled.png" />
     <meta property="og:image:width"   content="512" />
     <meta property="og:image:height"  content="512" />
+    <meta name="p:domain_verify" content="f56aab43251f5fa394e371ae54ec3d06"/>
 
     <!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
     <script src="js/all.js"></script>
