--- a/event-template/index.pug
+++ b/event-template/index.pug
@@ -658,5 +658,11 @@ doctype html
       | s1.setAttribute('crossorigin','*');
       | s0.parentNode.insertBefore(s1,s0);
       | })();
+
+    script(type="text/javascript")
+      | (function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter47893700 = new Ya.Metrika2({ id:47893700, clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true }); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = "https://mc.yandex.ru/metrika/tag.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks2");
+    noscript
+      div
+        img(src="https://mc.yandex.ru/watch/47893700" style="position:absolute; left:-9999px;" alt="")
   </body>
 </html>
