--- a/event-template/index.pug
+++ b/event-template/index.pug
@@ -22,6 +22,9 @@ doctype html
     <meta property="og:image:height"  content="512" />
     <meta name="p:domain_verify" content="f56aab43251f5fa394e371ae54ec3d06"/>
 
+    <link rel="icon" href="/images/favicon.png">
+    <link rel="shortcut icon" sizes="64x64" href="/images/favicon.png">
+
     <!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
     <script src="js/all.js"></script>
     <script src="https://connect.facebook.net/en_US/all.js#xfbml=1" async defer></script>
