--- a/event-template/index.pug
+++ b/event-template/index.pug
@@ -17,7 +17,7 @@ doctype html
     <meta property="og:type"          content="website" />
     <meta property="og:title"         content="DevTernity" />
     <meta property="og:description"   content="The premium-quality annual international software development conference. DevTernity is a place where forward-thinking developers, pragmatic architects and engineering leaders grow." />
-    <meta property="og:image"         content="http://devternity.com/images/logo_2017_filled.png" />
+    <meta property="og:image"         content="https://devternity.com/images/logo_2017_filled.png" />
     <meta property="og:image:width"   content="512" />
     <meta property="og:image:height"  content="512" />
     <meta name="p:domain_verify" content="f56aab43251f5fa394e371ae54ec3d06"/>
