add Baltics / Europe keywords

--- a/event-template/index.pug
+++ b/event-template/index.pug
@@ -153,7 +153,6 @@ doctype html
         </div>
     </div>
 
-  <div id="fb-root"></div>
   <header id="header">
     <nav id="nav">
       <ul>
@@ -293,15 +292,13 @@ doctype html
               <h5>Your time is money, that’s why DevTernity is two-day long. The intensive talks day, followed by practical workshops.</h5>             
             </section>        
 
-            <section class="6u 12u$(small) align-left">
-              <h3>
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <strong class="fa-stack-1x" style="color: #4dac71">5</strong>
-                </span> Excellent location
-              </h3>
-              <h5>DevTernity runs in the heart of Europe and connected by direct flights with most EU airports. The location is both stunning and affordable for foreign visitors.</h5>             
-            </section>      
+            section(class="6u 12u$(small) align-left")
+              h3
+                span.fa-stack.fa-lg
+                  i.fa.fa-circle.fa-stack-2x
+                  strong.fa-stack-1x(style="color: #4dac71") 5
+                | Excellent location
+              h5 DevTernity runs in the heart of the Baltic and connected by direct flights with most European airports. The location is both stunning and affordable for foreign visitors.
           </div>
         </div>
         <div id="trailer">        
